<resources>
    <string name="app_name">FridgeApp</string>


    <string name="action_settings">Settings</string>
    <string name="button">Add item</string>
    <string name="button2">Click2</string>
    <string name="title_activity_add_product">Add New Item</string>
    <string name="open_product">Pls </string>
    <string name="open_product_yes">Yes</string>
    <string name="open_product_no">No</string>

    <!-- Add Item Activity -->
    <string name="add_item_title">Add New Item</string>
    <string name="add_item_item_name">Item Name</string>
    <string name="add_item_category">Category</string>
    <string name="add_item_change_date_button">Change date</string>
    <string name="add_item_expiration_after_opened">Expiration after opened</string>
    <string name="add_item_number_of_items">Number of items</string>
    <string name="add_item_add_item_button">Add Item</string>

    <!-- ItemView activity -->
    <string name="add_extra_item_button">Add extra+</string>
    <string name="expires_after_opened">Expires after opened</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_new_product_scanner">NewProductScannerActivity</string>


    <string name="title_activity_add_container">AddContainerActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- AddContioner Activity-->
    <string name="container_type_fridge">Refrigerator</string>
    <string name="container_type_freezer">Freezer</string>
    <string name="container_type_drawer">Kitchen drawer</string>

    <string-array name="container_types">
        <item>@string/container_type_fridge</item>
        <item>@string/container_type_freezer</item>
        <item>@string/container_type_drawer</item>
    </string-array>

    <string name="title_activity_containers">ContainersActivity</string>

    <!-- Scanner activity -->
    <string name="scan_button">Scan</string>

    <!-- Setting-->
    <string name="shared_preference">SharedPreferenceKey</string>
    <string name="settings_timeString">TimeStringKey</string>
    <string name="settings_timeHour">TimeHourKey</string>
    <string name="settings_timeMinute">TimeMinuteKey</string>
    <string name="settings_dayBefore">settingDaysBefore</string>
    <string name="settings_button">Settings</string>

</resources>
