
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:layout_weight="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/add_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="24sp"/>

            <Button android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/scan_button" />

        </RelativeLayout>



        <TextView
            android:text="@string/add_item_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp" />

        <AutoCompleteTextView
            android:id="@+id/item_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/add_item_item_name"/>

        <TextView
            android:id="@+id/dateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"
            android:padding="10sp" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_change_date_button" />

        <TextView
            android:text="@string/add_item_expiration_after_opened"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"/>

        <EditText
            android:id="@+id/expiration_after_opened"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:text="@string/add_item_number_of_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"/>

        <EditText
            android:text="1"
            android:id="@+id/item_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/add_item_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_add_item_button"
            android:clickable="true"
            android:enabled="true"
            android:layout_alignParentBottom="true"
            />
    </LinearLayout>

    </LinearLayout>
